# lua_tools

./: Cargo.toml  README.md  lua_annotation_reference.md  prompt.md
src/: annotation_parser.rs  annotator.rs  lib.rs  parser.rs  project_context.rs  tokenizer.rs  type_inference.rs
src/frameworks/: mod.rs
src/frameworks/love2d/: 11.4.lua  11.5.lua
src/frameworks/neovim/: 0.10.0.lua  0.11.0.lua  0.9.0.lua
src/frameworks/wezterm/: 20230712.lua  20240222.lua
src/frameworks/yazi/: 0.1.5.lua
src/parser/: annotation_parser.rs  ast.rs  ast_annotations_printer.rs  ast_code_printer.rs  code_parser.rs  mod.rs  parser.rs  parser_helpers.rs  pretty_print.rs
src/tokenizer/: annotation_tokenizer.rs  code_tokenizer.rs  lexer.rs  mod.rs  token.rs
