[package]
name = "lua_tools"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nom = "7.1"
rayon = "1.8"

[[bin]]
name = "lua_commenter"
path = "src/bin/lua_commenter.rs"

[[bin]]
name = "lua_header"
path = "src/bin/lua_header.rs"
