[package]
name = "lua_tools"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "3.0.0"
regex = "1.5.0"
walkdir = "2.3.3"
dirs = "5.0.1"
tempfile = "3.8.1"

# [[bin]]
# name = "lua_commenter"
# path = "src/bin/lua_commenter.rs"
[[bin]]
name = "lua_commenter"
path = "src/bin/lua_commenter.rs"

[[bin]]
name = "lua_header"
path = "src/bin/lua_header.rs"
